--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "clientId": "930181692591833118",
-	"guildId": "622145676863864833",
-	"token": "OTMwMTgxNjkyNTkxODMzMTE4.GHiKu1.9WBTP-Xfq__m_0qq_mNsNbJYjDDg_4JdL6KSp8"
+    "clientId": "",
+	"guildId": "",
+	"token": ""
 }
